--- a/01 - DOM-manipulation/index.html
+++ b/01 - DOM-manipulation/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- Your code goes here -->
+    <p id="hello"></p>
     <script src="js/exercices.js"></script>
 </body>
 </html>
