--- a/04 - animations/index.html
+++ b/04 - animations/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animations</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Your code goes here -->
+    <p class="style1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum quibusdam, quae, fuga nobis quisquam accusantium dolorem quos quo soluta corporis fugiat sint tenetur veritatis atque, odio neque aut? Et, in?
+    Dolorum inventore eaque itaque, optio vero iusto eum soluta iste tempore, labore excepturi, mollitia culpa sequi ea quidem. Ex cum corporis vel est commodi optio aliquid fugit nobis iusto dicta?</p>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/exercices.js"></script>
 </body>
 </html>
