--- a/02 - events-management/index.html
+++ b/02 - events-management/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <!-- Your code goes here -->
+    <button id="btn-ex2-1">Cliquez ici</button>
+    <div id="mouse1">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <input id="input-ex3" type="text" placeholder="tapez votre texte">
+    <div id="divEx4" style="height: 200px; background-color: rgb(153, 209, 209);"></div>
     <script src="js/exercices.js"></script>
 </body>
 </html>
