--- a/02 - events-management/index.html
+++ b/02 - events-management/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Management</title>
 </head>
+
 <body>
     <!-- Your code goes here -->
     <button id="btn-ex2-1">Cliquez ici</button>
@@ -13,6 +15,73 @@
     </div>
     <input id="input-ex3" type="text" placeholder="tapez votre texte">
     <div id="divEx4" style="height: 200px; background-color: rgb(153, 209, 209);"></div>
+    <form id="formulaire" action="" method="post">
+        <label for="name">Nom</label>
+        <input type="text" id="name">
+        <label for="email">Email</label>
+        <input type="text" id="email">
+
+        <input type="submit" value="Envoyez">
+        <p id="messageError"></p>
+    </form>
+    <section id="lorem1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+    <section id="lorem2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, facilis, commodi adipisci autem blanditiis,
+            quos minima quo corrupti maxime reiciendis sit quia! Error, in cumque. Sequi iure voluptate et ab.
+            Repellendus optio magnam est earum! Inventore minus eligendi explicabo, deserunt dolores eaque totam
+            perferendis dolorem nulla accusamus, repudiandae expedita id porro. Nihil mollitia eum officiis, aut debitis
+            ad autem id?</p>
+    </section>
+
     <script src="js/exercices.js"></script>
 </body>
+
 </html>
