add ex javascript browser ex1&2

--- a/02 - events-management/index.html
+++ b/02 - events-management/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Management</title>
 </head>
-
+<style>
+.style2{border: 2px solid red;}
+.style1{color: gray; line-height: 50px;}
+</style>
 <body>
-    <!-- Your code goes here -->
-    <button id="btn-ex2-1">Cliquez ici</button>
-    <div id="mouse1">
+    <!-- exercice 1 -->
+    <h3>Exercice 1</h3>
+    <button id="btn1">Cliquez ici</button>
+    <!-- exercice 2 -->
+    <h3>Exercice 2</h3>
+    <div id="div2" class="style1">
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
-    <input id="input-ex3" type="text" placeholder="tapez votre texte">
+    <!-- exercice 3 -->
+    <h3>Exercice 3</h3>
+    <input id="input3" type="text" placeholder="tapez votre texte">
+    <!-- exercice 4 -->
+    <h3>Exercice 4</h3>
     <div id="divEx4" style="height: 200px; background-color: rgb(153, 209, 209);"></div>
     <form id="formulaire" action="" method="post">
         <label for="name">Nom</label>
@@ -81,7 +91,12 @@
             ad autem id?</p>
     </section>
 
-    <script src="js/exercices.js"></script>
+    <script src="js/exercice1.js"></script>
+    <script src="js/exercice2.js"></script>
+    <script src="js/exercice3.js"></script>
+    <script src="js/exercice4.js"></script>
+    <script src="js/exercice5.js"></script>
+    <script src="js/exercice6.js"></script>
 </body>
 
 </html>
